--- a/views/server/layout.jade
+++ b/views/server/layout.jade
@@ -13,6 +13,9 @@ html.no-js
         // Bootstrap dialog
         link(rel='stylesheet', href='/assets-admin/plugins/bootstrap3-dialog/css/bootstrap-dialog.min.css')
 
+        link(rel='stylesheet', href='/assets-admin/plugins/messenger/css/messenger.css')
+        link(rel='stylesheet', href='/assets-admin/plugins/messenger/css/messenger-theme-flat.css')
+
         // Fonts from Font Awsome
         link(rel='stylesheet', href='/assets-admin/css/font-awesome.min.css')
         // CSS Animate
@@ -199,6 +202,8 @@ html.no-js
         script(src='/assets-admin/js/jquery-1.10.2.min.js')
         script(src='/assets-admin/plugins/bootstrap/js/bootstrap.min.js')
         script(src='/assets-admin/plugins/bootstrap3-dialog/js/bootstrap-dialog.min.js')
+        script(src='/assets-admin/plugins/messenger/js/messenger.min.js')
+        script(src='/assets-admin/plugins/messenger/js/messenger-theme-future.js')
         script(src='/assets/js/vendor/mustache.js')
         script(src='/assets-admin/js/application.js')
         // Load these page level functions
