--- a/views/server/file/list.jade
+++ b/views/server/file/list.jade
@@ -41,19 +41,35 @@ block content
                 +pagination(pageInfo)
 block foot-js
     script.
+        var token = '#{token}';
+        Messenger.options = {
+            extraClasses: 'messenger-fixed messenger-on-bottom messenger-on-right',
+            theme: 'flat'
+        };
         $(function () {
             $(document).on('click', '.J_del', function(e) {
                 e.preventDefault();
                 var $this = $(this);
                 var $item = $this.closest('tr');
                 var url = $this.attr('href');
+                var messenger = Messenger().post("处理中...");
                 $.post(url, {
-                    _csrf: '#{token}'
+                    _csrf: token
                 }, function(json) {
                     if(json.success) {
+                        messenger.update({
+                            message: '删除成功',
+                            hideAfter: 3,
+                            type: 'success'
+                        });
                         $item.remove();
                     } else{
-                        BootstrapDialog.alert('删除失败');
+                        messenger.update({
+                            message: '删除失败',
+                            hideAfter: 3,
+                            type: 'error'
+                        });
+                        //BootstrapDialog.alert('删除失败');
                     }
                 });
             })
