--- a/views/server/content/add.jade
+++ b/views/server/content/add.jade
@@ -29,14 +29,14 @@ block content
                 .form-group
                     label 内容
                     textarea.form-control(name='content', rows='20')
-                .form-group
-                    label 标签
-                    div
-                        each tag in tags
-                            label.label.label-primary #{tag.name}
-                                input(type='checkbox', name='tags[]', value='#{tag.id}')
-                .help-block
-                    span.btn.btn-info.btn-xs 新增标签
+                //- .form-group
+                //-     label 标签
+                //-     div
+                //-         each tag in tags
+                //-             label.label.label-primary #{tag.name}
+                //-                 input(type='checkbox', name='tags[]', value='#{tag.id}')
+                //- .help-block
+                //-     span.btn.btn-info.btn-xs 新增标签
                 input(type='hidden', name='_csrf', value='#{token}')
                 button.btn.btn-primary(type='submit') 提交
     script#J_tmpl_gallery_item(type='x-tmpl-mustache')
