--- a/views/server/layout.jade
+++ b/views/server/layout.jade
@@ -16,6 +16,8 @@ html.no-js
         link(rel='stylesheet', href='/assets-admin/plugins/messenger/css/messenger.css')
         link(rel='stylesheet', href='/assets-admin/plugins/messenger/css/messenger-theme-flat.css')
 
+        link(rel='stylesheet', href='/assets-admin/plugins/chosen_v1.2.0/chosen.css')
+
         // Fonts from Font Awsome
         link(rel='stylesheet', href='/assets-admin/css/font-awesome.min.css')
         // CSS Animate
@@ -246,6 +248,7 @@ html.no-js
         script(src='/assets-admin/plugins/bootstrap3-dialog/js/bootstrap-dialog.min.js')
         script(src='/assets-admin/plugins/messenger/js/messenger.min.js')
         script(src='/assets-admin/plugins/messenger/js/messenger-theme-future.js')
+        script(src='/assets-admin/plugins/chosen_v1.2.0/chosen.jquery.min.js')
         script(src='/assets-admin/js/vendor/mustache.js')
         script(src='/assets-admin/js/application.js')
         // Load these page level functions
