--- a/views/server/content/edit.jade
+++ b/views/server/content/edit.jade
@@ -41,6 +41,19 @@ block content
                 .form-group
                     label 内容
                     textarea.form-control(name='content', rows='8') #{content.content}
+                .form-group
+                    label 标签
+                    div
+                        if (tags && tags.length > 0)
+                            select#J_select_tags(data-placeholder='请选择标签', name='tags[]', multiple, style='width: 500px;')
+                                each tag in tags
+                                    - var mytags = content.tags && content.tags.map(function(item) {return item.name;});
+                                    if (mytags.indexOf(tag.name) > -1)
+                                        option(value='#{tag.id}', selected) #{tag.name}
+                                    else 
+                                        option(value='#{tag.id}') #{tag.name}
+                .help-block
+                    span.btn.btn-info.btn-xs 新增标签
                 input(type='hidden', name='_csrf', value='#{token}')
                 button.btn.btn-primary(type='submit') 提交
     script#J_tmpl_gallery_item(type='x-tmpl-mustache')
@@ -64,7 +77,7 @@ block foot-js
     <script src="/assets/plugins/upload/js/jquery.fileupload-validate.js"></script>
 
     script.
-        
+        $('#J_select_tags').chosen({max_selected_options: 5, no_results_text: '没有匹配到'})
         $(function () {
             $('#fileupload').fileupload({
                 //url: '/upload',
