--- a/views/app/error.jade
+++ b/views/app/error.jade
@@ -3,5 +3,4 @@ extends layout
 block content
     .container
         h1.alert.alert-danger= message
-        h2= error.status
-        pre #{error.stack}
+        //h2= error.status
