--- a/views/server/page/item.jade
+++ b/views/server/page/item.jade
@@ -4,6 +4,6 @@ block content
     .row
         .col-md-12
             .lists
-                p 标题：#{page.name}
+                p 标题：#{page.title}
                 p 内容：#{page.content}
                 p 日期：#{page.created}
