--- a/views/app/pi.jade
+++ b/views/app/pi.jade
@@ -80,6 +80,8 @@ block content
                         | 阳台水培开关
                     .col-md-9
                         input.i-switch.J_switch(type='checkbox')
+                .row
+                    
                 
      
 block foot-js
